# ray-tracing

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/: camera.h  color.h  constants.h  hittable.h  hittable_list.h  interval.h  main.cc  material.h  ray.h  ray_tracing.h  sphere.h  utils.h  vec3.h
